# stock-analysis

./: .gitignore  README.md  pyproject.toml
data_access/: data_access.py
data_loader/: __init__.py  data_loader.py
process/: daily_ticker_comparison.py  daily_unit_comparison.py  data_load_process.py  data_loader.py  slice_trade_strategy.py
stock_analysis/: __init__.py  __main__.py
stock_analysis/config/: config.py  slices.json  tickers.json
stock_analysis/data_access/: data_access.py
stock_analysis/dtos/: slice.py
stock_analysis/helpers/: __init__.py
stock_analysis/process/: daily_ticker_comparison.py  daily_unit_comparison.py  data_loader.py  dollar_averaging.py  slice_trade_strategy.py
stock_analysis/series/: series_helper.py
stock_analysis/strategy/: constants.py  daily_trader.py  daily_unit_trader.py  dollar_averaging.py  slice_trader.py
strategy/: __init__.py  daily_trade_comparison.py  slice_trader.py
